--- a/docs/项目结构说明.md
+++ b/docs/项目结构说明.md
@@ -60,8 +60,9 @@ src/chatterbox/
 - **`gradio_vc_app.py`** - 🔄 语音转换Web应用
 
 ### 📚 docs/ - 文档集合
-- **`MAC_完整使用指南.md`** - 📋 Mac系统完整使用指南
-- **`MAC_运行指南.md`** - 🚀 Mac系统快速运行指南
+- **`Mac完整使用指南.md`** - 📋 Mac系统完整使用指南
+- **`Mac快速运行指南.md`** - 🚀 Mac系统快速运行指南
+- **`MPS设备配置指南.md`** - 🍎 Apple Silicon GPU加速设置
 
 ### 🔧 tools/ - 工具脚本
 - **`troubleshooting_guide.py`** - 🩺 故障诊断和排除工具
